# telweaver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  parse_to_code.py  scrape_telegram.py
src/templates/types/: type_template.jinja2
