[tool.poetry]
name = "telweaver"
version = "0.1.0"
description = "Auto generate Python types from Telegram's website"
authors = ["Tholo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "/home/tholo/.pyenv/versions/3.12.1/envs"
venv = "telweaver"
